publish: edit doc
generated from commit 7c019bf9f493fe70339197debe04eca704384033

--- a/index.html
+++ b/index.html
@@ -559,8 +559,8 @@ curl <span class="s2">"api_endpoint_here"</span> <span class="se">\</span>
 <td>birthday</td>
 <td>Required</td>
 <td>String</td>
-<td>Date format in &#39;MM/DD/YY&#39;</td>
-<td>&#39;02/15/76&#39;</td>
+<td>Date format in &#39;MM/DD/YYYY&#39;</td>
+<td>&#39;02/15/1976&#39;</td>
 <td>The birthday of the student to be added</td>
 </tr>
 <tr>
@@ -802,8 +802,8 @@ curl <span class="s2">"api_endpoint_here"</span> <span class="se">\</span>
 <td>birthday</td>
 <td>Optional</td>
 <td>String</td>
-<td>Date format in &#39;MM/DD/YY&#39;</td>
-<td>&#39;02/15/76&#39;</td>
+<td>Date format in &#39;MM/DD/YYYY&#39;</td>
+<td>&#39;02/15/1976&#39;</td>
 <td>The birthday of the student to be updated</td>
 </tr>
 <tr>
