publish: update get return obj
generated from commit ca807cf8007bf879e6d4144ddc390ca7408efdb1

--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@ curl <span class="s2">"api_endpoint_here"</span> <span class="se">\</span>
 <td>200: success; 400: request url not accessible; ... (See other error codes explanation in Errors sections)</td>
 </tr>
 <tr>
-<td>student</td>
+<td>application</td>
 <td>Array of Object</td>
 <td>&#39;[]&#39;</td>
 <td>If the application with the appID is not exist, return value will be an empty array</td>
@@ -748,7 +748,7 @@ curl <span class="s2">"api_endpoint_here"</span> <span class="se">\</span>
 <td>200: success; 400: request url not accessible; ... (See other error codes explanation in Errors sections)</td>
 </tr>
 <tr>
-<td>student</td>
+<td>applications</td>
 <td>Array of Object</td>
 <td>&#39;[]&#39;</td>
 <td>If no exist applications, return an empty array</td>
